syntax = "proto3";
package comms;

message Request_UploadBook {
  bytes chunks = 1;
  string nombre = 2;
  int32 cantidad = 3;
  int32 id = 4;
}

message Response_UploadBook {
  int32 state = 1;
}

message Request_Distribuir {
  bytes chunks = 1;
  string nombre = 2;
  int32 id = 4;
}
message Response_Distribuir {

}
message Request_Estado_M {
  int32 estado = 1;
}
message Response_Estado_M {
  int32 estado = 1;
}
message Request_Chunk {
  string nombre = 2;
}
message Response_Chunk {
  bytes chunks = 1;
}
message Request_Write_d {

}
message Response_Write_d {

}
message Request_Propuesta_d {
string propuesta = 1;
}
message Response_Propuesta_d {
int32 estado = 1;
}

message Request_Recurso_d {
string tiempo = 1;
}
message Response_Recurso_d {
int32 estado = 1;
}

service Comms {
 rpc UploadBook(Request_UploadBook) returns (Response_UploadBook) {}
 rpc Distribuir_chunks(Request_Distribuir) returns (Response_Distribuir) {}
 rpc EstadoMaquina(Request_Estado_M) returns (Response_Estado_M) {}
 rpc SolicitarChunk(Request_Chunk) returns (Response_Chunk) {}
 rpc WriteLogD(Request_Write_d) returns (Response_Write_d) {}
 rpc PropuestaD(Request_Propuesta_d) returns (Response_Propuesta_d) {}
 rpc UploadBookD(Request_UploadBook) returns (Response_UploadBook) {}
 rpc PedirRecurso(Request_Recurso_d) returns (Response_Recurso_d){}
}
